# ManifoldMind

ManifoldMind_Project_FIXED2/: README.md  local.properties
ManifoldMind_Project_FIXED2/app/: build.gradle.kts
ManifoldMind_Project_FIXED2/app/src/main/java/com/example/llama/: MainActivity.kt  MessageAdapter.kt
ManifoldMind_Project_FIXED2/app/src/main/kotlin/com/manifold/app/: ManifoldLLM.kt  NativeLib.kt
ManifoldMind_Project_FIXED2/app/src/main/res/layout/: activity_main.xml
ManifoldMind_Project_FIXED2/app/src/main/res/xml/: data_extraction_rules.xml
ManifoldMind_Project_FIXED2/gradle/: libs.versions.toml
ManifoldMind_Project_FIXED2/gradle/wrapper/: gradle-wrapper.properties
ManifoldMind_Project_FIXED2/lib/: build.gradle.kts
ManifoldMind_Project_FIXED2/lib/src/main/cpp/: CMakeLists.txt  manifold_operators.cpp
ManifoldMind_Project_FIXED2/lib/src/main/java/com/arm/aichat/: InferenceEngine.kt
ManifoldMind_Project_FIXED2/lib/src/main/java/com/arm/aichat/internal/: InferenceEngineImpl.kt
